<resources>
    <string name="app_name">ireader</string>

    <string name="main_book_shelf">书架</string>

    <string name="read_menu_pre_chapter">上一章</string>
    <string name="read_menu_next_chapter">下一章</string>
    <string name="read_menu_category">目录</string>
    <string name="read_menu_brightness">亮度</string>
    <string name="read_menu_listen">朗读</string>
    <string name="read_menu_setting">设置</string>

    <string name="read_menu_setting_font_size">字号</string>
    <string name="read_menu_setting_font_size_minus">A-</string>
    <string name="read_menu_setting_font_size_plus">A+</string>
    <string name="read_menu_setting_default">默认</string>
    <string name="read_menu_setting_font">字体</string>
    <string name="read_menu_setting_font_default">默认字体</string>
    <string name="read_menu_setting_font_italics">楷体</string>
    <string name="read_menu_setting_font_xu">徐静蕾体</string>
    <string name="read_menu_setting_font_more">更多</string>
    <string name="read_menu_setting_theme">主题</string>
    <string name="read_menu_setting_page_turn">翻页</string>
    <string name="read_menu_setting_page_turn_coverage">覆盖</string>
    <string name="read_menu_setting_page_turn_translate">平移</string>
    <string name="read_menu_setting_page_turn_simulation">仿真</string>
    <string name="read_menu_setting_page_turn_top_bottom">上下</string>
    <string name="read_menu_setting_page_turn_top_none">无</string>
    <string name="read_menu_setting_page_turn_top_alpha">淡入</string>
    <string name="read_menu_setting_immersive_reading">沉浸阅读</string>
    <string name="read_menu_setting_single_handed_reading">单手阅读</string>

    <string name="catalog_point">.</string>
    <string name="catalog_local_book">本地书籍</string>
</resources>
