<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/read_menu_setting_blank_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:id="@+id/read_menu_setting_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@color/read_menu_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font_size"
                style="@style/read_menu_text_dark_style"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/common_padding"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/common_padding"
                android:paddingRight="@dimen/common_padding">
                <TextView
                    android:id="@+id/read_menu_setting_font_size_minus_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_menu_setting_font_size_minus"
                    style="@style/read_menu_big_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/common_padding"/>
                <TextView
                    android:id="@+id/read_menu_setting_font_size_value_tv"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    style="@style/sub_title_text_style"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_centerInParent="true"/>
                <TextView
                    android:id="@+id/read_menu_setting_font_size_plus_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_menu_setting_font_size_plus"
                    style="@style/read_menu_big_text_style"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/common_padding"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/read_menu_setting_font_size_default_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_default"
                style="@style/read_menu_text_style"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/common_padding"
                android:layout_marginRight="@dimen/common_padding"
                android:layout_marginEnd="@dimen/common_padding"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font"
                android:padding="@dimen/common_padding"
                style="@style/read_menu_text_dark_style"/>
            <TextView
                android:id="@+id/read_menu_setting_font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font_default"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
            <TextView
                android:id="@+id/read_menu_setting_font_italics_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font_italics"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
            <TextView
                android:id="@+id/read_menu_setting_font_song_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font_xu"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
            <TextView
                android:id="@+id/read_menu_setting_font_more_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_font_more"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_theme"
                style="@style/read_menu_text_dark_style"
                android:padding="@dimen/common_padding"/>
            <com.yufeng.ireader.reader.view.ThemeImageView
                android:id="@+id/read_menu_setting_gray_theme_iv"
                android:layout_width="@dimen/read_menu_setting_theme_width"
                android:layout_height="@dimen/read_menu_setting_theme_width"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:contentDescription="@string/app_name"
                android:src="@drawable/read_theme_bg_gray"
                android:layout_gravity="center_vertical"/>
            <com.yufeng.ireader.reader.view.ThemeImageView
                android:id="@+id/read_menu_setting_1_theme_iv"
                android:layout_width="@dimen/read_menu_setting_theme_width"
                android:layout_height="@dimen/read_menu_setting_theme_width"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:contentDescription="@string/app_name"
                android:background="@color/read_menu_theme_1"
                android:layout_gravity="center_vertical"/>
            <com.yufeng.ireader.reader.view.ThemeImageView
                android:id="@+id/read_menu_setting_2_theme_iv"
                android:layout_width="@dimen/read_menu_setting_theme_width"
                android:layout_height="@dimen/read_menu_setting_theme_width"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:contentDescription="@string/app_name"
                android:background="@color/read_menu_theme_2"
                android:layout_gravity="center_vertical"/>
            <com.yufeng.ireader.reader.view.ThemeImageView
                android:id="@+id/read_menu_setting_3_theme_iv"
                android:layout_width="@dimen/read_menu_setting_theme_width"
                android:layout_height="@dimen/read_menu_setting_theme_width"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:contentDescription="@string/app_name"
                android:background="@color/read_menu_theme_3"
                android:layout_gravity="center_vertical"/>
            <com.yufeng.ireader.reader.view.ThemeImageView
                android:id="@+id/read_menu_setting_kraft_paper_theme_iv"
                android:layout_width="@dimen/read_menu_setting_theme_width"
                android:layout_height="@dimen/read_menu_setting_theme_width"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginStart="@dimen/common_padding"
                android:contentDescription="@string/app_name"
                android:src="@drawable/read_theme_bg_kraftpaper"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn"
                style="@style/read_menu_text_dark_style"
                android:padding="@dimen/common_padding"/>

            <TextView
                android:id="@+id/read_menu_setting_page_turn_coverage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn_coverage"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
            <TextView
                android:id="@+id/read_menu_setting_page_turn_top_bottom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn_top_bottom"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>
            <TextView
                android:id="@+id/read_menu_setting_page_turn_simulation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn_simulation"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>

            <TextView
                android:id="@+id/read_menu_setting_page_turn_alpha_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn_top_alpha"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>

            <TextView
                android:id="@+id/read_menu_setting_page_turn_none_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_menu_setting_page_turn_top_none"
                style="@style/read_menu_text_style"
                android:padding="@dimen/common_padding"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
